--- a/README
+++ b/README
@@ -11,3 +11,9 @@ Allow the player to control the Rocket after it's fired (5)
 Implement a simultaneous two-player mode (30)
 Redesign the game's artwork, UI, and sound to change its theme/aesthetic (to something other than sci-fi) (60)
 TOTAL: (5 + 5 + 30 + 60 = 100)
+
+Credit:
+I got some help for the sound effect:
+8bit Menu Select Sound: https://opengameart.org/content/8bit-menu-select, OpenGameArt.ORG, Fupi, Sunday, June 7, 2020 - 04:29
+Arrow hit twang Sound: https://opengameart.org/content/arrow-hit-twang, OpenGameArt.ORG, qubodup, Monday, April 12, 2010 - 12:15
+Farm animals Duck Sound: https://opengameart.org/content/farm-animals, OpenGameArt.ORG, Secretlondon, Sunday, October 11, 2009 - 05:29
